--- a/Data/project.json
+++ b/Data/project.json
@@ -1,42 +1,42 @@
 [    
     {
         "id": 1,
-        "images":  "https://i.ibb.co/gMhs8wC/1.jpg",
+        "images":  "https://i.ibb.co/3d0HK43/Screenshot-1.png",
         "Name": "project-01",
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": "https://afrin823.github.io/webdeveloper-portfolio/"
     },
     {
         "id": 2,
-        "images":  "https://i.ibb.co/nCpNsLy/2.jpg",
+        "images":  "https://i.ibb.co/6w8xq1H/Screenshot-3.png",
         "Name": "project-02",
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": ""
     },
     {
         "id": 3,
-        "images":  "https://i.ibb.co/b1CShk5/3.jpg",
+        "images":  "https://i.ibb.co/XJN2Tst/Screenshot-1.png",
         "Name": "project-03" ,
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": ""
     },
     {
         "id": 4,
-        "images":  "https://i.ibb.co/vQ8P30v/4.jpg",
+        "images":  "https://i.ibb.co/59ch8yt/Screenshot-4.png",
         "Name": "project-04",
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": ""
     },
     {
         "id": 5,
-        "images":  "https://i.ibb.co/wcCtDGs/5.jpg",
+        "images":  "https://i.ibb.co/WgBNgMg/Screenshot-5.png",
         "Name": "project-05",
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": ""
     },
     {
         "id": 6,
-        "images":  "https://i.ibb.co/WpvX44Y/6.jpg",
+        "images":  "https://i.ibb.co/5BYGqDs/Screenshot-2.png",
         "Name": "project-06",
         "skills": ["HTML, CSS, tailwind, JavaScript, Bootstrap"],
         "Details": ""
